# interview-feedback-copilot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 071cabf1b683_initial_schema.py
backend/app/: config.py  database.py  main.py  security.py
backend/app/evals/: run_eval.py
backend/app/models/: db_models.py
backend/app/routers/: analyze.py  debriefs.py  extract.py  projects.py  review.py  rubrics.py  synthesize.py  verify.py
backend/app/schemas/: models.py
backend/app/services/: baseline_extractor.py  coverage_analyzer.py  db_store.py  disagreement_detector.py  evidence_verifier.py  llm_client.py  store.py  synthesizer.py
backend/app/tests/: test_api.py  test_baseline_extractor.py  test_coverage_analyzer.py  test_db_store.py  test_disagreement_detector.py  test_eval_suite.py  test_evidence_verifier.py  test_llm_extractor.py  test_schemas.py  test_security.py  test_synthesizer.py
backend/sample_data/debriefs/: candidate_001_interviewer_1.txt  candidate_001_interviewer_2.txt  candidate_001_interviewer_3.txt  candidate_001_interviewer_4.txt
backend/sample_data/rubrics/: data_engineer_rubric.json  machine_learning_engineer_rubric.json  quantitative_researcher_rubric.json  software_engineer_rubric.json  ux_researcher_rubric.json
docs/: architecture.md  decisions.md  eval_plan.md  learning_log.md  product_brief.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
(+15 files in other folders)
